# football-player-replacement

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-scripts.txt  requirements.txt
backend/app/: config.py  deps.py  main.py
backend/app/routes/: catalog.py  health.py  players.py  search.py  validations.py
backend/app/schemas/: common.py  player.py  search.py
backend/app/services/: engine.py  heatmap.py  images.py  jobs.py  mane_preset.py  player_index.py
backend/scripts/: fetch_wikidata_images.py
backend/tests/: test_smoke.py
docs/: MODEL_ARTIFACTS.md
frontend/: .dockerignore  .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/lib/: constants.ts  types.ts  utils.ts
hf-space/: .dockerignore  Dockerfile  README.md
scripts/: rebuild_venv.ps1  validate_gp2.ps1
src/: run_search.py
src/gp1/: build_play2vec.py  build_play2vec_single.py  build_player2vec.py  build_player2vec_single.py  build_player_id_to_name.py  build_player_primary_position.py  build_playermatch2vec.py  build_playermatch2vec_single.py  data_processing.py  demo_player_similarity_single.py  embedding_postprocessing.py  explore_events_schema.py  inspect_action2vec.py  macro_position_build.py  player_similarity_demo.py  position_extractor  tokenize_single_action2vec.py  (+8 more)
(+77 files in other folders)
