[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "replacement-scout-backend"
version = "0.1.0"
description = "FastAPI wrapper around the locked GP2 scouting engine"
requires-python = ">=3.11,<3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
